# youtube-rag-assistant

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  video_text.csv  youtube_rag_groq.py
